solved all 7 problems

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-/*Input given HTML from instructions*/
+<!-- Dropping the HTML given via the instructions -->
 
 <div id="sonnet"> 
  How like a winter hath my absence been 
